# pyfect

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRUBUTING.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  enforce-merge-to-dev.yaml  enforce-merge-to-main.yaml  publish.yaml
docs/: contributing.md  index.md  roadmap.md
docs/api/: combinators.md  effect.md  either.md  option.md  runtime.md
docs/concepts/: concurrency.md  effects.md  either.md  errors.md  option.md
docs/getting-started/: installation.md  quickstart.md
src/pyfect/: __init__.py  combinators.py  constructors.py  context.py  control.py  effect.py  either.py  error.py  exit.py  interop.py  layer.py  option.py  pipe.py  primitives.py  runtime.py  transform.py
tests/: __init__.py  test_as.py  test_basic.py  test_exit.py  test_flat_map.py  test_ignore.py  test_map.py  test_map_error.py  test_pipe.py  test_suspend.py  test_tap.py  test_try.py
tests/constructors/: test_service.py  test_suspend.py  test_try.py
tests/context/: test_context.py
tests/control/: __init__.py  test_all.py  test_for_each.py  test_loop.py  test_unless_effect.py  test_when.py  test_zip.py  test_zip_with.py
tests/effect/: test_catch_all.py  test_catch_some.py  test_delay.py  test_exit.py  test_flat_map.py  test_from_either.py  test_if.py  test_ignore.py  test_loop.py  test_map.py  test_map_error.py  test_provide.py  test_suspend.py  test_tap.py  test_try.py  test_unless.py  test_when_effect.py  test_zip.py
tests/either/: test_all.py  test_flat_map.py  test_map.py  test_match.py  test_types.py  test_zip_with.py
tests/error/: test_catch_all_mixing.py  test_catch_if.py
tests/exit/: __init__.py  test_exit.py  test_match.py  test_types.py
tests/interop/: test_either.py  test_from_either.py  test_from_option.py  test_option.py
tests/layer/: test_layer_effect.py  test_layer_launch.py  test_layer_memo.py  test_layer_merge.py  test_layer_provide.py  test_layer_succeed.py  test_layer_sync.py  test_layer_tap.py
tests/option/: test_all.py  test_filter.py  test_first_some_of.py  test_flat_map.py  test_from_optional.py  test_get_or_else.py  test_get_or_none.py  test_get_or_raise.py  test_lift_predicate.py  test_map.py  test_match.py  test_or_else.py  test_types.py  test_zip_with.py
tests/runtime/: test_run_async.py  test_run_async_exit.py  test_run_sync_exit.py
tests/transform/: test_as.py  test_ignore.py  test_map_error.py  test_tap.py
