[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfect"
version = "0.1.0"
description = "A Python-native effect system for explicit error handling and structured concurrency"
authors = [
    { name = "Julián Marrades", email = "julian@marrad.es" },
]
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]
keywords = [
    "effect",
    "effects",
    "functional",
    "error-handling",
    "structured-concurrency",
    "typed",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # Core dependencies will be added as we implement features
    # Starting with minimal dependencies
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0,<1",
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-asyncio>=1.3.0,<2",
    "pre-commit>=4.5.1,<5",
    "mypy>=1.19.1,<2",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.1,<10",
    "mkdocstrings[python]>=1.0.3,<2",
]

[project.urls]
Homepage = "https://github.com/pyfect/pyfect"
Documentation = "https://pyfect.readthedocs.io"
Repository = "https://github.com/pyfect/pyfect"
Issues = "https://github.com/pyfect/pyfect/issues"
Changelog = "https://github.com/pyfect/pyfect/releases"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py313"
fix = true
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
    "FURB",   # refurb
]
ignore = ["ISC001", "COM812"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["pyfect"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# Pyright/Pylance configuration
[tool.pyright]
reportMissingTypeStubs = false

# mypy configuration
[tool.mypy]
strict = true
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
check_untyped_defs = true
warn_unused_configs = true
warn_return_any = false
disallow_any_unimported = false
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=pyfect",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

# Coverage configuration
[tool.coverage.run]
source = ["pyfect"]
omit = ["tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
